--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^26.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -18,5 +21,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
