--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "ts-node-dev --transpile-only src/server.ts"
+    "build": "tsc",
+    "start": "node dist/main/server.js",
+    "start:dev": "ts-node-dev --transpile-only src/main/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^26.0.0",
@@ -20,9 +24,11 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "*"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3"
   }
 }
